--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@ var yAxis = d3.svg.axis()
 
 function getDepartment(d) { return d.department; }
 
+var byDepartment = d3.nest()
+    .key( getDepartment );
+
 d3.json('data.json', function(error, records) {
+
+    var departments = byDepartment.entries( records );
 
     x.domain( records.map( getDepartment ) );
     color.domain( records.map( getDepartment ) );
@@ -84,6 +89,18 @@ d3.json('data.json', function(error, records) {
         .attr('fill', function(d) { return color( d.department ); })
         .attr('cx', function(d) { return x( d.department ) + (d.year == 2013 ? offset*3 : offset); })
         .attr('cy', function(d) { return y( d.percent ); });
+
+    svg.selectAll('.line')
+        .data( departments )
+        .enter().append('line')
+        .attr('class', 'line')
+        .attr('fill', 'none')
+        .attr('stroke', function(d) { return color( d.values[0].department ); })
+        .attr('x1', function(d) { return x( d.values[0].department ) + (d.values[0].year == 2013 ? offset*3 : offset); })
+        .attr('y1', function(d) { return y( d.values[0].percent ); })
+        .attr('x2', function(d) { return x( d.values[1].department ) + (d.values[1].year == 2013 ? offset*3 : offset); })
+        .attr('y2', function(d) { return y( d.values[1].percent ); });
+
 });
 
 </script>
