--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@ d3.json('data.json', function(error, records) {
 
     var offset = x.rangeBand() / 4;
 
+    function xCategoryThenYear(d) { return x( d.department ) + (d.year == 2013 ? offset*3 : offset); }
+    function yPercent(d) { return y( d.percent ); }
+    function colorByDepartment(d) { return color( d.department ); }
+
     var svg = d3.select('body').append('svg')
         .attr('width', width + 2*margin)
         .attr('height', height + 2*margin)
@@ -86,20 +90,20 @@ d3.json('data.json', function(error, records) {
         .enter().append('circle')
         .attr('class', 'dot')
         .attr('r', 3)
-        .attr('fill', function(d) { return color( d.department ); })
-        .attr('cx', function(d) { return x( d.department ) + (d.year == 2013 ? offset*3 : offset); })
-        .attr('cy', function(d) { return y( d.percent ); });
+        .attr('fill', colorByDepartment)
+        .attr('cx', xCategoryThenYear)
+        .attr('cy', yPercent);
 
     svg.selectAll('.line')
         .data( departments )
         .enter().append('line')
         .attr('class', 'line')
         .attr('fill', 'none')
-        .attr('stroke', function(d) { return color( d.values[0].department ); })
-        .attr('x1', function(d) { return x( d.values[0].department ) + (d.values[0].year == 2013 ? offset*3 : offset); })
-        .attr('y1', function(d) { return y( d.values[0].percent ); })
-        .attr('x2', function(d) { return x( d.values[1].department ) + (d.values[1].year == 2013 ? offset*3 : offset); })
-        .attr('y2', function(d) { return y( d.values[1].percent ); });
+        .attr('stroke', function(d) { return colorByDepartment( d.values[0] ); })
+        .attr('x1', function(d) { return xCategoryThenYear( d.values[0] ); })
+        .attr('y1', function(d) { return yPercent( d.values[0] ); })
+        .attr('x2', function(d) { return xCategoryThenYear( d.values[1] ); })
+        .attr('y2', function(d) { return yPercent( d.values[1] ); });
 
 });
 
