--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@ body {
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
 
-var width = 800,
-    height = 400,
-    margin = 35;
+var width = 370,
+    height = 270,
+    margin = 50;
 
 var percentage = d3.format('.0%');
 
@@ -77,7 +77,7 @@ d3.json('data.json', function(error, records) {
 
     var svg = d3.select('body').append('svg')
         .attr('width', width + 2*margin)
-        .attr('height', height + 2*margin)
+        .attr('height', height + 3*margin)
         .append('g')
         .attr('transform', 'translate('+margin+','+margin+')');
 
@@ -89,6 +89,13 @@ d3.json('data.json', function(error, records) {
         .attr('class', 'x axis')
         .attr('transform', 'translate(0,'+height+')')
         .call( xAxis );
+
+    d3.select('.x.axis')
+        .selectAll('text')
+        .attr("transform", function(d) {
+            var bb = this.getBBox();
+            return "translate(" + (bb.height * -2 - bb.width * 0.4 + 24) + "," + (bb.height + bb.width * 0.2) + ")rotate(-30)";
+        });
 
     svg.selectAll('.dot')
         .data( records )
