--- a/index.html
+++ b/index.html
@@ -117,6 +117,20 @@ d3.json('data.json', function(error, records) {
         .attr('x2', function(d) { return xCategoryThenYear( d.values[1] ); })
         .attr('y2', function(d) { return yPercent( d.values[1] ); });
 
+    var lastDepartment = departments.length - 1;
+
+    svg.append('text')
+        .attr('x', xCategoryThenYear( departments[lastDepartment].values[0] ) + 13)
+        .attr('y', yPercent( departments[lastDepartment].values[0] ) - 5)
+        .style('text-anchor', 'end')
+        .text( departments[lastDepartment].values[0].year );
+
+    svg.append('text')
+        .attr('x', xCategoryThenYear( departments[lastDepartment].values[1] ) + 5)
+        .attr('y', yPercent( departments[lastDepartment].values[1] ) + 3)
+        .style('text-anchor', 'start')
+        .text( departments[lastDepartment].values[1].year );
+
 });
 
 </script>
