--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@ var width = 380,
 var percentage = d3.format('.0%');
 
 var x = d3.scale.ordinal()
-    .rangeRoundBands([0,width], 0.4);
+    .rangePoints([width * 0.25, width * 0.75])
+    .domain([1996,2013]);
 
 var y = d3.scale.linear()
     .domain([0, 1])
@@ -45,8 +46,7 @@ var color = d3.scale.category10();
 
 var xAxis = d3.svg.axis()
     .scale(x)
-    .orient('bottom')
-    .tickSize(0);
+    .orient('bottom');
 
 var yAxis = d3.svg.axis()
     .scale(y)
@@ -66,12 +66,9 @@ d3.json('data.json', function(error, records) {
     var departments = byDepartment.entries( records );
     var departmentList = departments.map(function(d) { return d.key; });
 
-    x.domain( departmentList );
     color.domain( departmentList );
 
-    var offset = x.rangeBand() / 4;
-
-    function xCategoryThenYear(d) { return x( d.department ) + (d.year == 2013 ? offset*3 : offset); }
+    function xYear(d) { return x( d.year ); }
     function yPercent(d) { return y( d.percent ); }
     function colorByDepartment(d) { return color( d.department ); }
 
@@ -109,7 +106,7 @@ d3.json('data.json', function(error, records) {
         .attr('class', 'dot')
         .attr('r', 3)
         .attr('fill', colorByDepartment)
-        .attr('cx', xCategoryThenYear)
+        .attr('cx', xYear)
         .attr('cy', yPercent);
 
     svg.selectAll('.line')
@@ -118,24 +115,10 @@ d3.json('data.json', function(error, records) {
         .attr('class', 'line')
         .attr('fill', 'none')
         .attr('stroke', function(d) { return colorByDepartment( d.values[0] ); })
-        .attr('x1', function(d) { return xCategoryThenYear( d.values[0] ); })
+        .attr('x1', function(d) { return xYear( d.values[0] ); })
         .attr('y1', function(d) { return yPercent( d.values[0] ); })
-        .attr('x2', function(d) { return xCategoryThenYear( d.values[1] ); })
+        .attr('x2', function(d) { return xYear( d.values[1] ); })
         .attr('y2', function(d) { return yPercent( d.values[1] ); });
-
-    var lastDepartment = departments.length - 1;
-
-    svg.append('text')
-        .attr('x', xCategoryThenYear( departments[lastDepartment].values[0] ) + 13)
-        .attr('y', yPercent( departments[lastDepartment].values[0] ) - 5)
-        .style('text-anchor', 'end')
-        .text( departments[lastDepartment].values[0].year );
-
-    svg.append('text')
-        .attr('x', xCategoryThenYear( departments[lastDepartment].values[1] ) + 5)
-        .attr('y', yPercent( departments[lastDepartment].values[1] ) + 3)
-        .style('text-anchor', 'start')
-        .text( departments[lastDepartment].values[1].year );
 
 });
 
