--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@ var increasingDepartments = {
     'EPA': true
 };
 
+var decreasingDepartments = {
+    'Commerce': true
+};
+
 var width = 280,
     height = 350,
     margin = 50;
@@ -72,7 +76,11 @@ d3.json('data.json', function(error, records) {
 
     function xYear(d) { return x( d.year ); }
     function yPercent(d) { return y( d.percent ); }
-    function colorByTrend(d) { return d.department in increasingDepartments ? '#F22' : '#CCC'; }
+    function colorByTrend(d) {
+        return d.department in increasingDepartments ? '#F22' :
+            d.department in decreasingDepartments ? '#22F' :
+            '#CCC';
+    }
 
     var svg = d3.select('body').append('svg')
         .attr('width', width + 2*margin)
@@ -116,7 +124,7 @@ d3.json('data.json', function(error, records) {
         .attr('y2', function(d) { return yPercent( d.values[1] ); });
 
     svg.selectAll('.label')
-        .data( departments.filter(function(d){ return !!(d.key in increasingDepartments); }) )
+        .data( departments.filter(function(d){ return d.key in increasingDepartments || d.key in decreasingDepartments; }) )
         .enter().append('text')
         .attr('class', 'label')
         .attr('x', width * 0.67 + 35)
