--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ body {
 
 </style>
 <body>
+<a href="https://github.com/couchand/essential-federal-employees"><img style="position: absolute; top: 0; right: 0; border: 0; z-index: -1;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
 
@@ -131,4 +132,18 @@ d3.json('data.json', function(error, records) {
 
 });
 
+</script>
+<script>
+  //<![CDATA[
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-40774124-1']);
+    _gaq.push(['_setDomainName', 'github.io']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  //]]>
 </script>
