--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {
 
 </style>
 <body>
-<a href="https://github.com/couchand/essential-federal-employees"><img style="position: absolute; top: 0; right: 0; border: 0; z-index: -1;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+<a href="https://github.com/couchand/essential-federal-employees"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
 
