--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@ d3.json('data.json', function(error, records) {
         .attr('transform', 'translate('+margin+','+margin+')');
 
     svg.append('text')
-        .style('font-size', '14px')
+        .style('font-size', '13px')
         .attr('x', 5)
         .attr('y', -20)
-        .text('Essential Federal Employees, 1996 vs 2013')
+        .text('Essential Federal Employees, selected departments')
 
     svg.append('g')
         .attr('class', 'y axis')
