--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@ var decreasingDepartments = {
     'Commerce': true
 };
 
+function isHighlighted(department){ return department in increasingDepartments || department in decreasingDepartments; }
+
 var width = 280,
     height = 350,
     margin = 50;
@@ -72,10 +74,10 @@ var byDepartment = d3.nest()
 d3.json('data.json', function(error, records) {
 
     var departments = byDepartment.entries(
-        records.filter(function(d){ return !(d.department in increasingDepartments || d.department in decreasingDepartments); })
+        records.filter(function(d){ return !isHighlighted(d.department); })
     );
     byDepartment.entries(
-        records.filter(function(d){ return d.department in increasingDepartments || d.department in decreasingDepartments; })
+        records.filter(function(d){ return isHighlighted(d.department); })
     ).forEach(function(d){ departments.push(d); });
     var departmentList = departments.map(function(d) { return d.key; });
 
@@ -120,7 +122,7 @@ d3.json('data.json', function(error, records) {
         .attr('y2', function(d) { return yPercent( d.values[1] ); });
 
     svg.selectAll('.label')
-        .data( departments.filter(function(d){ return d.key in increasingDepartments || d.key in decreasingDepartments; }) )
+        .data( departments.filter(function(d){ return isHighlighted(d.key); }) )
         .enter().append('text')
         .attr('class', 'label')
         .attr('x', width * 0.67 + 35)
